questionnaire table first link

--- a/css/style.css
+++ b/css/style.css
@@ -590,7 +590,7 @@ hr {
 
 .footer-explore-list li a:hover {
     padding-left: 15px;
-    color: #aa8453);
+    color: #aa8453;
 }
 
 .footer-explore-list li a:before {
