--- a/css/questionaire.css
+++ b/css/questionaire.css
@@ -44,12 +44,12 @@ p {
     color: #88bcff;
 } */
 
-.day {
-    /* font-size: 16px;
+/* .day { */
+/* font-size: 16px;
     font-weight: 400; */
-    /* text-align: center; */
-    /* color: #88bcff; */
-}
+/* text-align: center; */
+/* color: #88bcff; */
+/* } */
 
 /* 
 .titleSelect {
