--- a/css/title.css
+++ b/css/title.css
@@ -122,3 +122,16 @@ button:hover {
     background-color:#fff;
     border:2px #003C9D solid; */
 }
+
+#pageModule {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#numberPageModule {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10px;
+}
