--- a/css/title.css
+++ b/css/title.css
@@ -123,7 +123,67 @@ button:hover {
     border:2px #003C9D solid; */
 }
 
-#pageModule {
+/* 六角css */
+.Pagination {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #444;
+}
+
+.Pagination .pagination__group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Pagination .pagination__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border: 1px solid rgb(221, 221, 221);
+    border-width: 1px 1px 1px 0;
+    background-color: #fff;
+    background-color: #fff;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+
+.Pagination .pagination__item.active,
+.Pagination .pagination__item:hover {
+    background-color: rgb(180, 161, 233);
+    color: #fff;
+}
+
+.Pagination .pagination__item.unclick {
+    background-color: #ddd;
+    color: rgb(180, 161, 233);
+    cursor: not-allowed;
+}
+
+.Pagination .pagination__item.pre::after {
+    content: "<<";
+}
+
+.Pagination .pagination__item.next::after {
+    position: relative;
+    z-index: 1;
+    content: ">>";
+}
+
+.Pagination .pagination__item:first-child {
+    border-left: 1px solid #ddd;
+    border-radius: 5px 0 0 5px;
+}
+
+.Pagination .pagination__item:last-child {
+    border-radius: 0 5px 5px 0;
+}
+
+/* #pageModule {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -134,4 +194,15 @@ button:hover {
     align-items: center;
     justify-content: center;
     padding-top: 10px;
+} */
+
+#inputs input {
+    width: 100px;
+    height: 50px;
+    background-color: white;
+}
+
+#table {
+    width: 90%;
+    background-color: #60226b;
 }
