--- a/css/questionaire.css
+++ b/css/questionaire.css
@@ -137,3 +137,8 @@ input {
     backface-visibility: hidden;
     transform-style: preserve-3d;
 }
+
+.p-ans {
+    font-family: 'Barlow', sans-serif;
+    color: #666;
+}
