--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,29 @@ textarea {
     border-color: ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
+input[type="number"],
+textarea {
+    max-width: 6%;
+    margin-bottom: 15px;
+    padding: 10px 0;
+    height: auto;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border-width: 0 0 1px;
+    border-style: solid;
+    display: block;
+    width: 100%;
+    line-height: 1.5em;
+    font-family: 'Barlow', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    color: #666;
+    background-image: none;
+    border-bottom: 1px solid #ececec;
+    border-color: ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
 input:focus,
 textarea:focus {
     border-bottom-width: 1px;
